--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+.vscode
+
 # Byte-compiled / optimized / DLL files
 __pycache__/
 *.py[cod]
@@ -104,6 +106,7 @@ celerybeat.pid
 # Environments
 .env
 .venv
+template_env
 env/
 venv/
 ENV/
