--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,14 +1,24 @@
+attrs==20.3.0
 click==7.1.2
 fastapi==0.63.0
 flake8==3.8.4
 h11==0.11.0
+iniconfig==1.1.1
 mccabe==0.6.1
 mypy==0.790
 mypy-extensions==0.4.3
+packaging==20.8
+pluggy==0.13.1
+py==1.10.0
 pycodestyle==2.6.0
 pydantic==1.7.3
 pyflakes==2.2.0
+pyparsing==2.4.7
+pytest==6.2.1
 starlette==0.13.6
+toml==0.10.2
 typed-ast==1.4.1
 typing-extensions==3.7.4.3
 uvicorn==0.13.2
+pytest-cov==2.10.1
+requests==2.25.1
