--- a/src/Dockerfile
+++ b/src/Dockerfile
@@ -1,18 +1,26 @@
 #base image
-FROM python:3.8-slim
-
-#set workdir
-WORKDIR /app
+FROM tiangolo/uvicorn-gunicorn-fastapi:python3.8
 
 # set environment variables
 ENV PYTHONDONTWRITEBYTECODE 1
 ENV PYTHONUNBUFFERED 1
 
-# copy requirements file
-COPY ./requirements.txt /app/requirements.txt
+#set workdir
+WORKDIR /app
 
-#install libraries dependencies to container
-RUN pip install -r requirements.txt
+# Install Poetry
+RUN curl -sSL https://raw.githubusercontent.com/python-poetry/poetry/master/get-poetry.py | POETRY_HOME=/opt/poetry python && \
+    cd /usr/local/bin && \
+    ln -s /opt/poetry/bin/poetry && \
+    poetry config virtualenvs.create false
+
+# Copy poetry.lock* in case it doesn't exist in the repo
+COPY ./pyproject.toml ./app/poetry.lock* /app/
+
+# Allow installing dev dependencies to run tests
+ARG INSTALL_DEV=true
+RUN bash -c "if [ $INSTALL_DEV == 'true' ] ; then poetry install --no-root ; else poetry install --no-root --no-dev ; fi"
 
 #add app folder inside container
 COPY . /app
+ENV PYTHONPATH=/app
