--- a/src/requirements.txt
+++ b/src/requirements.txt
@@ -1,13 +1,24 @@
-attrs==20.3.0
-click==7.1.2
-fastapi==0.63.0
-flake8==3.8.4
-h11==0.11.0
-iniconfig==1.1.1
+appdirs==1.4.4    
+attrs==20.3.0     
+autoflake==1.4    
+black==20.8b1     
+certifi==2020.12.5
+chardet==4.0.0    
+click==7.1.2      
+coverage==5.3.1   
+fastapi==0.63.0   
+flake8==3.8.4     
+gunicorn==20.0.4  
+h11==0.11.0       
+httptools==0.1.1  
+idna==2.10
+iniconfig==1.1.1      
+isort==5.6.4
 mccabe==0.6.1
 mypy==0.790
 mypy-extensions==0.4.3
 packaging==20.8
+pathspec==0.8.1
 pluggy==0.13.1
 py==1.10.0
 pycodestyle==2.6.0
@@ -15,10 +26,14 @@ pydantic==1.7.3
 pyflakes==2.2.0
 pyparsing==2.4.7
 pytest==6.2.1
+pytest-cov==2.10.1
+regex==2020.11.13
+requests==2.25.1
 starlette==0.13.6
 toml==0.10.2
 typed-ast==1.4.1
 typing-extensions==3.7.4.3
+urllib3==1.26.2
 uvicorn==0.13.2
-pytest-cov==2.10.1
-requests==2.25.1
+uvloop==0.14.0
+websockets==8.1
